# ceph-heat-predictor

./: .gitignore  AGENTS.md  CEPH_OPERATIONS_MANUAL.md  CODEX_AUTO.md  CODEX_CEPH.md  CODEX_CEPH_TODO.md  CODEX_CEPH_UPDATE.md  CODEX_CONTEXT.md  CODEX_ICFS.md  CODEX_TEST.md  Ceph操作手册.md  HEAT_TEST_PROCESS.md  ICFS_OBJECT_HEAT_MIGRATION.md  ceph-build-deps_17.2.7-1_amd64.buildinfo  do_cmake.sh  rebuild.sh
codex_docs/: BRANCH_WORKFLOW.md  CEPH_OPERATIONS_MANUAL.md  CODEX_AUTO.md  CODEX_CEPH.md  CODEX_CEPH_TODO.md  CODEX_ICFS.md  EXPERIMENT_PROTOCOL.md  MGR_HP_OPERATIONS.md  README.md  TRACE_DATASET.md
codex_docs/grills/: 2026-07-17-cold-to-hot-feature-grill.md
codex_docs/plans/: 2026-07-16-hp-trace.md  2026-07-17-cold-to-hot-crossing-feature-design.md  2026-07-17-cold-to-hot-crossing-feature-implementation.md  2026-07-17-expected-future-heat-feature.md  2026-07-17-hp-trace-analysis.md  2026-07-17-hp-trace-replay-design.md  2026-07-17-hp-trace-replay.md  2026-07-17-no-migration-steady-confidence-analysis-design.md  2026-07-17-no-migration-steady-confidence-analysis.md  2026-07-18-all-io-prediction-analysis.md  2026-07-18-arf-adaptation-tuning.md  2026-07-18-arf-fast-cohort.md  2026-07-23-heat-predictor-architecture-refactor.md
codex_docs/todo/: FINAL_VALIDATION.md  OTSU_THRESHOLD.md  PREDICTION_THRESHOLD.md  TIME_BASED_EQ.md
docs/superpowers/plans/: 2026-07-11-heat-predictor-conservative-optimization.md  2026-07-11-otsu-confidence-threshold.md  2026-07-11-supervised-prediction-threshold.md  2026-07-12-codex-docs-reorganization.md  2026-07-14-future-added-heat-label.md  2026-07-14-strict-window-eq-decoupling.md  2026-07-14-time-based-eq.md  2026-07-14-time-domain-heat-maintenance.md  2026-07-15-future-added-heat-otsu.md  2026-07-15-otsu-data-source-matrix.md  2026-07-15-score-total-heat-otsu.md  2026-07-23-v2-future-access-hotness.md
docs/superpowers/specs/: 2026-07-14-dedicated-eq-expiry-thread-design.md  2026-07-14-time-domain-heat-maintenance-design.md  2026-07-15-future-added-heat-otsu-design.md  2026-07-15-otsu-data-source-matrix-design.md  2026-07-15-score-total-heat-otsu-design.md  2026-07-23-v2-future-access-hotness-design.md
src/blk/: CMakeLists.txt
src/blk/kernel/: KernelDevice.cc  KernelDevice.h  MultiTieredDevice.h  TieredDevice.h  heat_predictor.h
src/blk/kernel/include/: ARFClassifier.h  GaussianSplitter.h  HeatPredictor.h  HoeffdingTree.h  HoeffdingTree.tpp  HoeffdingTreeClassifier.h  Metrics.h  PipelineClassifier.h  StandardScaler.h  Transformer.h  TreeBase.h  TreeBase.tpp  utils.h
src/blk/kernel/include/drift/: ADWIN.h  DDM.h  DetectorConcept.h  stats.h
src/heatpredictor/: heat_predictor.h  hp_config.h  hp_evaluation_queue.h  hp_expiry_heap.h  hp_features.h  hp_integer_quantile_window.h  hp_otsu_histogram.h  hp_prediction_threshold.h  hp_quantile_window.h  hp_score_otsu_histogram.h  hp_telemetry.h  hp_trace.h  hp_trace_record.h  hp_types.h
src/heatpredictor/include/: ARFClassifier.h  ArfAdaptationTelemetry.h  Classifier.h  GaussianSplitter.h  HoeffdingTree.h  HoeffdingTree.tpp  HoeffdingTreeClassifier.h  HoeffdingTreeClassifier.tpp  HotList.h  Metrics.h  PipelineClassifier.h  StandardScaler.h  Transformer.h  TreeBase.h  TreeBase.tpp  utils.h
src/heatpredictor/include/drift/: ADWIN.h  DDM.h  DetectorConcept.h  HDDM_W.h  PageHinckley.h  stats.h
src/mgr/: CMakeLists.txt  DaemonServer.cc  MgrCommands.h  ObjectHeatPredictorStatus.cc  ObjectHeatPredictorStatus.h  PyModuleRegistry.h
src/osd/: CMakeLists.txt  OSD.cc  ObjectHeatPredictor.cc  ObjectHeatPredictor.h  PrimaryLogPG.cc  PrimaryLogPG.h
src/pybind/mgr/dashboard/frontend/: package-lock.json  package.json
test_sh/: analyze_hp_ablation.py  analyze_hp_replay.py  analyze_hp_trace.py  convert_hp_trace.py  fixosd.sh  hp_ablation_analysis.py  hp_algorithm_probe.cc  hp_performance_probe.cc  hp_replay_analysis.py  hp_trace_analysis.py  hp_trace_probe.cc  hp_trace_replay.cc  hp_trace_replay.h  mytest.sh  prepare_skew_data.sh  project_hp_trace_v1_csv.py  rebuild.sh  restart-osd.sh  run_skew_full_background.sh  run_skew_tests_reset_hp.sh  run_vdbench_tests_background.sh  test_analyze_hp_ablation.py  test_analyze_hp_replay.py  test_hp_trace_analysis.py  test_hp_trace_replay.cc  test_project_hp_trace_v1_csv.py
test_sh/config_skew/: 1G文件4K块随机写.txt  1G文件4K块随机读.txt  1G文件4M块顺序写.txt  1G文件4M块顺序读.txt  4K文件4K块随机写.txt  4K文件4K块随机读.txt  AI推理.txt  CCF_OPS性能.txt  CCF_带宽性能.txt  图计算.txt  大数据_400k文件随机读写测试.txt
test_sh/config_skew_data/: 1G文件数据构造.txt  4K文件数据构造.txt  AI推理.txt  CCF_OPS性能.txt  CCF_带宽性能.txt  图计算.txt  大数据_400k文件随机读写测试.txt
test_sh/config_skew_run/: 1G文件4K块随机写.txt  1G文件4K块随机读.txt  1G文件4M块顺序写.txt  1G文件4M块顺序读.txt  4K文件4K块随机写.txt  4K文件4K块随机读.txt  AI推理.txt  CCF_OPS性能.txt  CCF_带宽性能.txt  图计算.txt  大数据_400k文件随机读写测试.txt
test_sh/update/: OSD_UPDATE_PROCESS.md  hust-ceph-heat-test.sudoers  install_ceph_osd_with_plugins.sh
